--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,23 +4,23 @@ repo_url: https://github.com/PD2JP/BLT-Docs
 theme: readthedocs
 pages:
 - ['index.md', 'Home']
-- ['globals/variables.md', 'Lua Globals', 'Global Variables']
-- ['globals/functions.md', 'Lua Globals', 'Global Functions']
-- ['globals/file.md', 'Lua Globals', 'Files and IO']
-- ['globals/console.md', 'Lua Globals', 'Debug Console']
-- ['mods/definition.md', 'Mods', 'Mod Definition File']
-- ['mods/updates.md', 'Mods', 'Automatic Updates']
-- ['mods/manager.md', 'Mods', 'Mod Manager']
-- ['lua/localization.md', 'Lua', 'Localization']
+- ['globals/variables.md', 'グローバル', 'グローバル変数']
+- ['globals/functions.md', 'グローバル', 'グローバル関数']
+- ['globals/file.md', 'グローバル', 'ファイルIO']
+- ['globals/console.md', 'グローバル', 'デバッグコンソール']
+- ['mods/definition.md', 'Mod', 'Mod定義ファイル']
+- ['mods/updates.md', 'Mod', '自動更新']
+- ['mods/manager.md', 'Mod', 'Modマネージャー']
+- ['lua/localization.md', 'Lua', 'ローカライゼーション']
 - ['lua/hooks.md', 'Lua', 'Hooks']
-- ['lua/delayed_calls.md', 'Lua', 'Delayed Calls']
-- ['lua/notifications.md', 'Lua', 'Notifications']
-- ['lua/quick_menu.md', 'Lua', 'QuickMenu']
+- ['lua/delayed_calls.md', 'Lua', '遅延呼び出し']
+- ['lua/notifications.md', 'Lua', '通知']
+- ['lua/quick_menu.md', 'Lua', 'クイックメニュー']
 - ['lua/json.md', 'Lua', 'Json']
-- ['lua/utils.md', 'Lua', 'Utilities']
-- ['lua/menu/menu_helper.md', 'Menus', 'Menu Helper']
-- ['lua/menu/menu_helper_hooks.md', 'Menus', 'Menu Helper Hooks']
-- ['lua/menu/json_menu.md', 'Menus', 'Json Menus']
-- ['lua/network/network.md', 'Networking', 'LuaNetwork']
-- ['lua/network/hooks.md', 'Networking', 'Hooks']
-- ['lua/network/extensions.md', 'Networking', 'Extensions']
+- ['lua/utils.md', 'Lua', 'ユーティリティ']
+- ['lua/menu/menu_helper.md', 'メニュー', 'メニューヘルパー']
+- ['lua/menu/menu_helper_hooks.md', 'メニュー', 'メニューヘルパーHooks']
+- ['lua/menu/json_menu.md', 'メニュー', 'Jsonメニュー']
+- ['lua/network/network.md', 'ネットワーク', 'Luaネットワーク']
+- ['lua/network/hooks.md', 'ネットワーク', 'Hooks']
+- ['lua/network/extensions.md', 'ネットワーク', '拡張機能']
